--- a/angular/views/nav.html
+++ b/angular/views/nav.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-info" ng-controller="NavController">
+<nav class="navbar navbar-info" ng-controller="AuthController">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
@@ -15,8 +15,8 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 
       <ul class="nav navbar-nav navbar-left">
-        <li ng-show="signedIn()"><a href="" data-toggle="modal" data-target="#posModal">Post a Task</a></li>
-        <li><a href="#/browse">Browse Tasks</a></li>
+        <li ng-show="signedIn()"><a href="" >Dashboard</a></li>
+        <li><a href="#/browse">Your Infra</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li ng-hide="signedIn()"><a href="#/login">Login</a></li>
