--- a/angular/views/welcome.html
+++ b/angular/views/welcome.html
@@ -1,1 +1,10 @@
-<h2 class="title">Hi, welcome to scalegray - apt monitoring solutions thats there! :-)</h2>
+<body ng-app="scalegrayApp">
+
+<h2 class="title"  >Hi, welcome to scalegray - apt monitoring solutions thats there! :-)</h2>
+
+</body>
+
+<script src="../scripts/app.js"></script>
+
+
+<script src="../scripts/controllers/auth.js"></script>
