--- a/angular/views/register.html
+++ b/angular/views/register.html
@@ -1,4 +1,6 @@
-<div class="auth-forms title">
+
+<div class="auth-forms title" ng-controller="AuthController">
+  <div ng-app="scalegrayApp">
   <h2>Register</h2>
   <form ng-submit="register(user)">
 
@@ -6,15 +8,9 @@
       <div class="input-group-addon">
       	<span class="glyphicon glyphicon-user" aria-hidden="true"></span>
       </div>
-      <input type="name" ng-model="user.name" placeholder="Name" class="form-control" required>
+      <input type="name" ng-model="user.username" placeholder="Email" class="form-control" required>
     </div><br>
 
-    <div class="input-group">
-      <div class="input-group-addon">
-      	<span class="glyphicon glyphicon-envelope" aria-hidden="true"></span>
-      </div>
-      <input type="email" ng-model="user.email" placeholder="Email" class="form-control" required>
-    </div><br>
 
     <div class="input-group">
       <div class="input-group-addon">
@@ -25,4 +21,28 @@
 
     <input type="submit" value="Register" class="btn btn-danger">
   </form>
+  </div>
 </div>
+
+
+<!--
+<div class="signup center-block jumbotron">
+  <form role="form">
+  <h1>Signup</h1>
+  <div class="form-group">
+    <label for="username">Username</label>
+    <input type="text" class="form-control" id="username" ng-model="user.username" placeholder="Username">
+  </div>
+  <div class="form-group">
+    <label for="password">Password</label>
+    <input type="password" class="form-control" id="password" ng-model="user.password" placeholder="Password">
+  </div>
+  <div class="form-group">
+    <label for="extra">Extra</label>
+    <input type="text" class="form-control" id="extra" ng-model="user.extra" placeholder="Extra Information">
+  </div>
+  <button type="submit" class="btn btn-default" ng-click="register()">Submit</button>
+</form>
+<a ui-sref="login()">Click here to Login</a>
+</div>
+-->
